<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MaintenanceRequestsActivity">

    <ImageView
        android:id="@+id/img_maintenance_arrow_back"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_maintenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:text="Maintenance Requests"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_tab_maintenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"

        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_maintenance_arrow_back">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabSelectedTextColor="@color/white"
        app:tabIndicatorGravity="stretch"
        app:tabTextColor="@color/black"
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabIndicatorColor="@color/sky_blue"
        >
    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current"/>

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closed"/>
        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canceled"/>


    </com.google.android.material.tabs.TabLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_maintenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_tab_maintenance">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cos_maintenance"
            android:layout_marginBottom="@dimen/_15sdp">

            <TextView
                android:id="@+id/tv_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Request ID - 123ASD"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/maintenance_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/tv_request"/>

            <TextView
                android:id="@+id/tv_building_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Building Name"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maintenance_view"/>

            <TextView
                android:id="@+id/tv_building_name_white_tower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="White Tower"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maintenance_view"/>

            <TextView
                android:id="@+id/tv_unit_no_maintenance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Unit No."
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_building_name"/>
            <TextView
                android:id="@+id/tv_unit_no_142"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="White Tower"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_building_name"/>
            <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Status"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_unit_no_142"/>
            <TextView
                android:id="@+id/tv_raised"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Raised"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_unit_no_142"/>
            <TextView
                android:id="@+id/requested_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Requested For"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status"/>
            <TextView
                android:id="@+id/ac_repair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ac Repair"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Date"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requested_for"/>
            <TextView
                android:id="@+id/date_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01-12-2021"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requested_for"/>

            <View
                android:id="@+id/maintenance_view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"/>

            <Button
                android:id="@+id/btn_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="Chat"
                android:background="@drawable/btn_round_eng"
                android:stateListAnimator="@null"
                android:padding="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/maintenance_view2"
                />

            <Button
                android:id="@+id/btn_cancel_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="Cancel Request"
                android:padding="@dimen/_5sdp"
                android:stateListAnimator="@null"
                android:background="@drawable/btn_round_eng"
                app:layout_constraintEnd_toStartOf="@+id/btn_chat"
                app:layout_constraintTop_toBottomOf="@+id/maintenance_view2"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>